--- a/css/app.css
+++ b/css/app.css
@@ -17,7 +17,7 @@ body {
 
 .container {
     margin: auto;
-    padding: 1em;
+    padding: 2em;
     width: 80%;
 }
 
@@ -28,9 +28,9 @@ body {
 }
 
 .destination {
-    background: #03a9f4;
+    background: #4dd0e1;
     box-shadow: 0 1px 9px 0 rgba(0, 0, 0, 0.4);
-    color: white;
+    color:mediumpurple ;
     margin: 0.5em;
     min-height: 200px;
     flex: 0 1 200px;
