--- a/css/app.css
+++ b/css/app.css
@@ -62,6 +62,6 @@ h2 {
 #Beijing {
     background-color: #03a9f4;
 }
-#Paris {
-    background-color: #d32f2f;
+#Scotland {
+    background-color: #388e3c;
 }
